# docs/swagger/docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /api/v1
 definitions:
   controller.Message:
     properties:
@@ -55,25 +54,215 @@ definitions:
         example: bottle_name
         type: string
     type: object
+  model.NotionCreateDatabaseResponse:
+    properties:
+      archived:
+        type: boolean
+      cover:
+        properties:
+          external:
+            properties:
+              url:
+                type: string
+            type: object
+          type:
+            type: string
+        type: object
+      created_time:
+        type: string
+      icon:
+        properties:
+          emoji:
+            type: string
+          type:
+            type: string
+        type: object
+      id:
+        type: string
+      is_inline:
+        type: boolean
+      last_edited_time:
+        type: string
+      object:
+        type: string
+      parent:
+        properties:
+          page_id:
+            type: string
+          type:
+            type: string
+        type: object
+      properties:
+        properties:
+          "+1":
+            properties:
+              id:
+                type: string
+              name:
+                type: string
+              people:
+                type: object
+              type:
+                type: string
+            type: object
+          Description:
+            properties:
+              id:
+                type: string
+              name:
+                type: string
+              rich_text:
+                type: object
+              type:
+                type: string
+            type: object
+          Food group:
+            properties:
+              id:
+                type: string
+              name:
+                type: string
+              select:
+                properties:
+                  options:
+                    items:
+                      properties:
+                        color:
+                          type: string
+                        id:
+                          type: string
+                        name:
+                          type: string
+                      type: object
+                    type: array
+                type: object
+              type:
+                type: string
+            type: object
+          In stock:
+            properties:
+              checkbox:
+                type: object
+              id:
+                type: string
+              name:
+                type: string
+              type:
+                type: string
+            type: object
+          Last ordered:
+            properties:
+              date:
+                type: object
+              id:
+                type: string
+              name:
+                type: string
+              type:
+                type: string
+            type: object
+          Name:
+            properties:
+              id:
+                type: string
+              name:
+                type: string
+              title:
+                type: object
+              type:
+                type: string
+            type: object
+          Photo:
+            properties:
+              files:
+                type: object
+              id:
+                type: string
+              name:
+                type: string
+              type:
+                type: string
+            type: object
+          Price:
+            properties:
+              id:
+                type: string
+              name:
+                type: string
+              number:
+                properties:
+                  format:
+                    type: string
+                type: object
+              type:
+                type: string
+            type: object
+          Store availability:
+            properties:
+              id:
+                type: string
+              multi_select:
+                properties:
+                  options:
+                    items:
+                      properties:
+                        color:
+                          type: string
+                        id:
+                          type: string
+                        name:
+                          type: string
+                      type: object
+                    type: array
+                type: object
+              name:
+                type: string
+              type:
+                type: string
+            type: object
+        type: object
+      title:
+        items:
+          properties:
+            annotations:
+              properties:
+                bold:
+                  type: boolean
+                code:
+                  type: boolean
+                color:
+                  type: string
+                italic:
+                  type: boolean
+                strikethrough:
+                  type: boolean
+                underline:
+                  type: boolean
+              type: object
+            href: {}
+            plain_text:
+              type: string
+            text:
+              properties:
+                content:
+                  type: string
+                link: {}
+              type: object
+            type:
+              type: string
+          type: object
+        type: array
+      url:
+        type: string
+    type: object
   model.UpdateAccount:
     properties:
       name:
         example: account name
         type: string
     type: object
-host: localhost:8080
 info:
-  contact:
-    email: support@swagger.io
-    name: API Support
-    url: http://www.swagger.io/support
-  description: This is a sample server celler server.
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  termsOfService: http://swagger.io/terms/
-  title: Swagger Example API
-  version: "1.0"
+  contact: {}
 paths:
   /accounts:
     get:
@@ -319,6 +508,29 @@ paths:
       tags:
       - accounts
       - admin
+  /api/v1/notion/createDatabase:
+    post:
+      consumes:
+      - application/json
+      description: Creates a database as a subpage in the specified parent page, with
+        the specified properties schema. Currently, the parent of a new database must
+        be a Notion page or a wiki database.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.NotionCreateDatabaseResponse'
+            type: array
+        "400":
+          description: fail
+          schema:
+            type: string
+      summary: Create a new Notion Database
+      tags:
+      - notion
   /bottles:
     get:
       consumes:
@@ -430,7 +642,7 @@ paths:
         name: default
         type: string
       produces:
-      - application/json
+      - text/plain
       responses:
         "200":
           description: answer
@@ -468,7 +680,7 @@ paths:
         required: true
         type: integer
       produces:
-      - application/json
+      - text/plain
       responses:
         "200":
           description: answer
@@ -506,7 +718,7 @@ paths:
         required: true
         type: integer
       produces:
-      - application/json
+      - text/plain
       responses:
         "200":
           description: answer
@@ -539,7 +751,7 @@ paths:
         required: true
         type: string
       produces:
-      - application/json
+      - text/plain
       responses:
         "200":
           description: answer
@@ -566,7 +778,7 @@ paths:
       - application/json
       description: do ping
       produces:
-      - application/json
+      - text/plain
       responses:
         "200":
           description: pong
@@ -649,44 +861,4 @@ paths:
       summary: custome header example
       tags:
       - example
-securityDefinitions:
-  ApiKeyAuth:
-    in: header
-    name: Authorization
-    type: apiKey
-  BasicAuth:
-    type: basic
-  OAuth2AccessCode:
-    authorizationUrl: https://example.com/oauth/authorize
-    flow: accessCode
-    scopes:
-      admin: '                            Grants read and write access to administrative
-        information'
-    tokenUrl: https://example.com/oauth/token
-    type: oauth2
-  OAuth2Application:
-    flow: application
-    scopes:
-      admin: '                             Grants read and write access to administrative
-        information'
-      write: '                             Grants write access'
-    tokenUrl: https://example.com/oauth/token
-    type: oauth2
-  OAuth2Implicit:
-    authorizationUrl: https://example.com/oauth/authorize
-    flow: implicit
-    scopes:
-      admin: '                          Grants read and write access to administrative
-        information'
-      write: '                          Grants write access'
-    type: oauth2
-  OAuth2Password:
-    flow: password
-    scopes:
-      admin: '                          Grants read and write access to administrative
-        information'
-      read: '                           Grants read access'
-      write: '                          Grants write access'
-    tokenUrl: https://example.com/oauth/token
-    type: oauth2
 swagger: "2.0"
